--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev --poll --respawn --transpile-only --exit-child --clear --require tsconfig-paths/register ./src/index.ts",
     "build": "rimraf ./dist && tsc --project tsconfig.json && tsc-alias --project tsconfig.json",
     "start": "node ./dist/index.js",
-    "format": "prettier --config .prettierrc --write ."
+    "format": "prettier --config .prettierrc --write .",
+    "lint": "eslint --config .eslintrc --ext .ts ."
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
@@ -22,6 +23,13 @@
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.7.16",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "eslint": "^8.23.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
